[gd_scene load_steps=10 format=3 uid="uid://dpscdg0f7o6ft"]

[ext_resource type="Script" uid="uid://cv23xnc0v5l0t" path="res://addons/sprouty_dialogs/editor/modules/file_manager/scripts/file_manager.gd" id="1_3v21c"]
[ext_resource type="Script" uid="uid://xuu4omf67pq3" path="res://addons/sprouty_dialogs/editor/scripts/side_bar_controller.gd" id="1_avlcx"]
[ext_resource type="Texture2D" uid="uid://dv53yhmd7k3d5" path="res://addons/sprouty_dialogs/icons/add-dialog.svg" id="2_fjick"]
[ext_resource type="Texture2D" uid="uid://vfuxkihislug" path="res://addons/sprouty_dialogs/icons/add-char.svg" id="3_ljhu2"]
[ext_resource type="Script" uid="uid://dlco4x1xmoek0" path="res://addons/sprouty_dialogs/editor/modules/file_manager/scripts/file_list_manager.gd" id="4_r5dun"]
[ext_resource type="Texture2D" uid="uid://mebsjvglwvhd" path="res://addons/sprouty_dialogs/icons/interactable/collapse-left.svg" id="8_72tq1"]
[ext_resource type="PackedScene" uid="uid://bxwvdcjc16ytf" path="res://addons/sprouty_dialogs/editor/components/file_field.tscn" id="8_wehoa"]
[ext_resource type="Texture2D" uid="uid://d2g1blyeyjaqn" path="res://addons/sprouty_dialogs/icons/interactable/collapse-right.svg" id="9_xltsg"]

[sub_resource type="DPITexture" id="DPITexture_6bto2"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="SideBar" type="VSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
collapsed = true
script = ExtResource("1_avlcx")

[node name="ContentContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Container" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2

[node name="FileManager" type="VBoxContainer" parent="ContentContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_3v21c")

[node name="FileOptions" type="HBoxContainer" parent="ContentContainer/Container/FileManager"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="NewDialogButton" type="Button" parent="ContentContainer/Container/FileManager/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_fjick")
flat = true

[node name="VSeparator" type="VSeparator" parent="ContentContainer/Container/FileManager/FileOptions"]
layout_mode = 2

[node name="NewCharButton" type="Button" parent="ContentContainer/Container/FileManager/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_ljhu2")
flat = true

[node name="VSeparator2" type="VSeparator" parent="ContentContainer/Container/FileManager/FileOptions"]
layout_mode = 2

[node name="OpenFileButton" type="Button" parent="ContentContainer/Container/FileManager/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("DPITexture_6bto2")
flat = true

[node name="VSeparator3" type="VSeparator" parent="ContentContainer/Container/FileManager/FileOptions"]
layout_mode = 2

[node name="SaveFileButton" type="Button" parent="ContentContainer/Container/FileManager/FileOptions"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = SubResource("DPITexture_6bto2")
flat = true

[node name="FileList" type="VBoxContainer" parent="ContentContainer/Container/FileManager"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_r5dun")

[node name="FileSearch" type="LineEdit" parent="ContentContainer/Container/FileManager/FileList"]
layout_mode = 2
placeholder_text = "Search files..."
right_icon = SubResource("DPITexture_6bto2")
caret_blink = true
caret_blink_interval = 0.5

[node name="FileItemList" type="ItemList" parent="ContentContainer/Container/FileManager/FileList"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
same_column_width = true

[node name="FilteredList" type="ItemList" parent="ContentContainer/Container/FileManager/FileList"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
same_column_width = true

[node name="CSVFileField" type="VBoxContainer" parent="ContentContainer/Container/FileManager"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="ContentContainer/Container/FileManager/CSVFileField"]
layout_mode = 2
text = "CSV Translation File"

[node name="FileField" parent="ContentContainer/Container/FileManager/CSVFileField" instance=ExtResource("8_wehoa")]
layout_mode = 2
_open_directory = false
_recent_file_type = "csv_dialog_files"
file_filters = PackedStringArray("*.csv")

[node name="PopupDialogs" type="Node" parent="ContentContainer/Container/FileManager"]

[node name="FileMenu" type="PopupMenu" parent="ContentContainer/Container/FileManager/PopupDialogs"]
unique_name_in_owner = true
size = Vector2i(108, 120)
item_count = 5
item_0/text = "Save"
item_0/icon = SubResource("DPITexture_6bto2")
item_0/id = 0
item_1/text = "Save As..."
item_1/icon = SubResource("DPITexture_6bto2")
item_1/id = 1
item_2/id = 4
item_2/separator = true
item_3/text = "Close"
item_3/icon = SubResource("DPITexture_6bto2")
item_3/id = 2
item_4/text = "Close All"
item_4/icon = SubResource("DPITexture_6bto2")
item_4/id = 3

[node name="ConfirmCloseFiles" type="AcceptDialog" parent="ContentContainer/Container/FileManager/PopupDialogs"]
unique_name_in_owner = true
title = "Please Confirm..."
initial_position = 4
size = Vector2i(336, 106)
dialog_text = "The file/s contains unsaved changes. 
Are you sure you want to close this file/s?"

[node name="NewDialog" type="FileDialog" parent="ContentContainer/Container/FileManager/PopupDialogs"]
title = "New Dialog"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Create File"
filters = PackedStringArray("*.tres")

[node name="NewChar" type="FileDialog" parent="ContentContainer/Container/FileManager/PopupDialogs"]
auto_translate_mode = 1
title = "New Character"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Create File"
filters = PackedStringArray("*.tres")

[node name="OpenFile" type="FileDialog" parent="ContentContainer/Container/FileManager/PopupDialogs"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")

[node name="SaveFile" type="FileDialog" parent="ContentContainer/Container/FileManager/PopupDialogs"]
auto_translate_mode = 1
initial_position = 4
size = Vector2i(600, 400)
filters = PackedStringArray("*.tres")

[node name="BottomContainer" type="HBoxContainer" parent="ContentContainer/Container"]
layout_mode = 2

[node name="Version" type="Label" parent="ContentContainer/Container/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.619608, 0.611765, 0.568627, 1)
text = "v0.0.1
"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="ContentContainer/Container/BottomContainer"]
layout_mode = 2
icon = ExtResource("8_72tq1")
flat = true

[node name="ExpandBar" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExpandButton" type="Button" parent="ExpandBar"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("9_xltsg")
flat = true
vertical_icon_alignment = 2

[node name="VSeparator" type="VSeparator" parent="ExpandBar"]
layout_mode = 2

[connection signal="focus_exited" from="ContentContainer/Container/FileManager/FileList/FileSearch" to="." method="_on_file_search_focus_exited"]
[connection signal="pressed" from="ContentContainer/Container/BottomContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ExpandBar/ExpandButton" to="." method="_on_expand_button_pressed"]
